WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197037
REGRESSION (
r241988
): Switching tabs is slow
https://bugs.webkit.org/show_bug.cgi?id=197037
Summary
REGRESSION (r241988): Switching tabs is slow
Tim Horton
Reported
2019-04-17 15:37:11 PDT
REGRESSION (
r241988
): Switching tabs is slow
Attachments
Patch
(11.60 KB, patch)
2019-04-17 15:37 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-04-17 15:37:32 PDT
Created
attachment 367688
[details]
Patch
Tim Horton
Comment 2
2019-04-17 15:37:34 PDT
<
rdar://problem/49951473
>
Simon Fraser (smfr)
Comment 3
2019-04-17 15:49:22 PDT
Comment on
attachment 367688
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=367688&action=review
> Source/WebKit/UIProcess/mac/TiledCoreAnimationDrawingAreaProxy.mm:125 > - process().connection()->waitForAndDispatchImmediately<Messages::WebPageProxy::DidUpdateActivityState>(m_identifier.toUInt64(), activityStateUpdateTimeout, IPC::WaitForOption::InterruptWaitingIfSyncMessageArrives); > + process().connection()->waitForAndDispatchImmediately<Messages::WebPageProxy::DidUpdateActivityState>(m_webPageProxy.pageID(), activityStateUpdateTimeout, IPC::WaitForOption::InterruptWaitingIfSyncMessageArrives);
Type safety FTW
WebKit Commit Bot
Comment 4
2019-04-17 16:33:25 PDT
Comment on
attachment 367688
[details]
Patch Clearing flags on attachment: 367688 Committed
r244410
: <
https://trac.webkit.org/changeset/244410
>
WebKit Commit Bot
Comment 5
2019-04-17 16:33:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug