REGRESSION (r241988): Switching tabs is slow https://bugs.webkit.org/show_bug.cgi?id=197037 <rdar://problem/49951473>

Reviewed by Simon Fraser.

Source/WebKit:

* UIProcess/mac/TiledCoreAnimationDrawingAreaProxy.mm:
(WebKit::TiledCoreAnimationDrawingAreaProxy::waitForDidUpdateActivityState):
r241988 changed to wait for a WebPageProxy message to a given DrawingArea ID,
but WebPageProxy messages are identified by their WebPageProxy ID.
Revert that one change. The rest of the patch looks OK.

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/ReparentWebViewTimeout.mm: Added.
(TEST):
* TestWebKitAPI/cocoa/TestWKWebView.h:
* TestWebKitAPI/cocoa/TestWKWebView.mm:
(-[TestWKWebView addToTestWindow]):
Add a test that hangs without this fix.


Canonical link: https://commits.webkit.org/211296@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244410 268f45cc-cd09-0410-ab3c-d52691b4dbfc